data/all_generated_tests/raw_wast_tests/call_indirect_EdgeCaseFailuresinbr_table_4613.wast
;; 2. **Test Description**: Use a `br_table` instruction with an index of `-1` to determine if negative indexing is handled correctly. This test checks for improper handling of negative indexes, which could lead to undefined behavior.    - **Constraint**: The index used must be negative.    - **Edge Case Relation**: Verifies that implementations prevent undefined behavior when a negative index is used.

(assert_invalid
  (module
    (func $f (param i32))
    (type $sig (func (param i32)))
    (table funcref (elem $f))
    (func $test
      (i32.const -1)
      (call_indirect (type $sig) (i32.const 0))
    )
  )
  "type mismatch"
)